Add list order without pagination logic
